added some html

--- a/index.html
+++ b/index.html
@@ -3,22 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="description">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <title>GitHub user search app</title>
   <link rel="stylesheet" href="dist/styles.css">
 </head>
+
 <body>
-  <main>
-    <section>
-      devfinder
+  <main class="grid">
+    <header class="theme">
+      <h1 class="theame__header">devfinder</h1>
+      <div class="theme__toggle">
+        <div>Dark</div>
+        <div><img src="./assets/images/icon-moon.svg" alt="Moon"></div>
+      </div>
 
-      Light
-      Dark
-    </section>
+      <!-- <div>
+        Light
+        <div>
+          <img src="./assets/images/icon-sun.svg" alt="Sun">
+        </div>
+      </div> -->
+    </header>
 
-    <section>
-      Search GitHub username...
-      Search
+    <section class="search-bar">
+      <img src="./assets/images/icon-search.svg" alt="search">
+      <input type="search" name="search" id="search" placeholder="Search Github username...">
+      <button type="submit">Search</button>
     </section>
 
     <section>
