--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="description">
+  <meta name="description" content="Search Github users by username">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <title>GitHub user search app</title>
   <link rel="stylesheet" href="dist/styles.css">
@@ -69,17 +69,17 @@
 
           <div class="stats__flex-child">
             <div>Repos</div> <!--first child-->
-            <div>8</div> <!--nth child-->
+            <h3>8</h3> <!--nth child-->
           </div>
 
           <div class="stats__flex-child">
             <div>Followers</div>
-            <div>3938</div>
+            <h3>3938</h3>
           </div>
 
           <div class="stats__flex-child">
             <div>Following</div>
-            <div>9</div>
+            <h3>9</h3>
           </div>
 
         </div>
