--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <title>GitHub user search app</title>
   <link rel="stylesheet" href="dist/styles.css">
+  <script defer src="main.js"></script>
 </head>
 
 <body>
