--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <aside>
 
-    <div class="search container container--white br-15">
+    <div class="search container br-15">
       <!--FLEX, COMP-->
       <div class="search__icon">
         <img src="./assets/images/icon-search.svg" alt="search">
@@ -53,7 +53,7 @@
 
   <main>
 
-    <div class="profile-card container container--white br-15">
+    <div class="profile-card container br-15">
       <div class="user-profile">
         <div>
           <img class="user-profile__img" src="./assets/images/profile-placeholder.jpg" alt="Profile">
