start theme setup

--- a/index.html
+++ b/index.html
@@ -19,22 +19,21 @@
     </div>
 
     <div class="theme__toggle">
+      <!-- Toggle Dark -->
       <div class="theme__toggle--dark">Dark</div>
 
       <div class="theme__toggle-img">
         <img src="./assets/images/icon-moon.svg" alt="Moon">
       </div>
-    </div>
 
-    <!-- LIGHT THEME TOGGLE-->
-    <!-- <div class="theme__toggle"> 
-          <div class="theme__toggle--dark">Light</div>
-          
-          <div class="theme__toggle-img">
-            <img src="./assets/images/icon-sun.svg" alt="Sun">
-          </div>
-        </div> -->
-    <!-- </div> -->
+      <!-- Toggle Light -->
+      <div class="theme__toggle--light hidden">Light</div>
+
+      <div class="theme__toggle-img">
+        <img src="./assets/images/icon-sun.svg" alt="Sun">
+      </div>
+    </div>
+    </div>
   </header>
 
   <aside>
