add theme switch functionality

--- a/index.html
+++ b/index.html
@@ -18,21 +18,22 @@
       <h1>devfinder</h1>
     </div>
 
-    <div class="theme__toggle">
-      <!-- Toggle Dark -->
+    <!-- Toggle Dark -->
+    <div id="themeDark" class="theme__toggle">
       <div class="theme__toggle--dark">Dark</div>
 
       <div class="theme__toggle-img">
-        <img src="./assets/images/icon-moon.svg" alt="Moon">
-      </div>
-
-      <!-- Toggle Light -->
-      <div class="theme__toggle--light hidden">Light</div>
-
-      <div class="theme__toggle-img">
-        <img src="./assets/images/icon-sun.svg" alt="Sun">
+        <img src="./assets/images/icon-moon.svg" alt="moon">
       </div>
     </div>
+
+    <!-- Toggle Light -->
+    <div id="themeLight" class="theme__toggle hidden">
+      <div class="theme__toggle--light">Light</div>
+
+      <div class="theme__toggle-img">
+        <img src="./assets/images/icon-sun.svg" alt="sun">
+      </div>
     </div>
   </header>
 
