restructure bem theme toggle

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     </div>
 
     <!-- Toggle Dark -->
-    <div id="toggleDark" class="theme__toggle">
-      <div class="theme__toggle--dark">Dark</div>
-      <div class="theme__toggle-img">
+    <div id="toggleDark" class="theme-toggle">
+      <div class="theme-toggle--dark">Dark</div>
+      <div class="theme-toggle__img">
         <img id="dark" src="./assets/images/icon-moon.svg" alt="moon">
       </div>
     </div>
 
     <!-- Toggle Light -->
-    <div id="toggleLight" class="theme__toggle hidden">
-      <div class="theme__toggle--light">Light</div>
-      <div class="theme__toggle-img">
+    <div id="toggleLight" class="theme-toggle hidden">
+      <div class="theme-toggle--light">Light</div>
+      <div class="theme-toggle__img">
         <img id="light" src="./assets/images/icon-sun.svg" alt="sun">
       </div>
     </div>
