rename theme toggle component

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
 
 <body>
   <header class="container">
-
     <div class="logo">
       <h1>devfinder</h1>
     </div>
 
     <!-- Toggle Dark -->
     <div id="toggleDark" class="theme-toggle">
-      <div class="theme-toggle--dark">Dark</div>
+      <div class="theme-toggle__theme">Dark</div>
       <div class="theme-toggle__img">
         <img id="dark" src="./assets/images/icon-moon.svg" alt="moon">
       </div>
@@ -28,7 +27,7 @@
 
     <!-- Toggle Light -->
     <div id="toggleLight" class="theme-toggle hidden">
-      <div class="theme-toggle--light">Light</div>
+      <div class="theme-toggle__theme">Light</div>
       <div class="theme-toggle__img">
         <img id="light" src="./assets/images/icon-sun.svg" alt="sun">
       </div>
