Add further search functionality
Included getting profile name, company, date and bio from API data also updated HTML ids

--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
 
         <div class="profile__info">
           <div>
-            <h2 class="profile__name">The Octocat</h2>
-            <a class="profile__link" href="#">@octocat</a>
+            <h2 id="profileName" class="profile__name">The Octocat</h2>
+            <div id="profileLink" class="profile__link">@octocat</div>
           </div>
 
           <div>
-            <div class="profile__date">Joined <span>25 Jan 2011</span></div>
+            <div class="profile__date">Joined <span id="dateJoined">25 Jan 2011</span></div>
           </div>
         </div>
       </div>
 
-      <p class="profile-card__desc">
+      <p id="bio" class="profile-card__bio">
         Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Rerum assumenda enim id accusantium molestiae?
       </p>
